--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -47,19 +47,20 @@ body {
   letter-spacing: normal;
   text-transform: uppercase;
   text-shadow: none;
-  word-wrap: break-word; }
+  word-wrap: break-word;
+  text-align:left; }
 
 .reveal h1 {
-  font-size: 4em;
-  font-weight: normal;
-  text-transform: none;
-  font-family: "Lobster", Helvetica, sans-serif; }
+  font-size: 3em; }
 
 .reveal h2 {
-  font-size: 1.6em; }
+  font-size: 1.6em;
+  color: #FF4D00; }
 
 .reveal h3 {
-  font-size: 1.3em; }
+  font-size: 1.6em;
+  color: #FF4D00;
+  text-align: center; }
 
 .reveal h4 {
   font-size: 1em; }
@@ -72,7 +73,8 @@ body {
  *********************************************/
 .reveal p {
   margin: 20px 0;
-  line-height: 1.3; }
+  line-height: 1.3;
+  text-align: left}
 
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img,
@@ -93,7 +95,7 @@ body {
 .reveal ul {
   display: inline-block;
   text-align: left;
-  margin: 0 0 0 1em; }
+  margin: 0 0 0 0em; }
 
 .reveal ol {
   list-style-type: decimal; }
@@ -112,7 +114,7 @@ body {
 .reveal ol ol,
 .reveal ol ul {
   display: block;
-  margin-left: 40px; }
+   }
 
 .reveal dt {
   font-weight: bold; }
