--- a/css/theme/white.css
+++ b/css/theme/white.css
@@ -74,7 +74,7 @@ body {
 .reveal p {
   margin: 20px 0;
   line-height: 1.3;
-  text-align: left}
+  text-align: left; }
 
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img,
@@ -93,9 +93,8 @@ body {
 .reveal ol,
 .reveal dl,
 .reveal ul {
-  display: inline-block;
   text-align: left;
-  margin: 0 0 0 0em; }
+  margin: 0 0 0 1em; }
 
 .reveal ol {
   list-style-type: decimal; }
